# quantumchanneltransformation

./: .gitignore  README.md
julia/: AllCodes.jl  AllCodes_DFS.jl  AllCodes_DFS_Standard.jl  AllCodes_DFS_Standard_Grid.jl  AllCodes_DFS_Standard_Grid_Test.jl  AllCodes_Standard_Grid.jl  AllCodes_Standard_Grid_Final.jl  AllCodes_Standard_Grid_GS.jl  AllCodes_Standard_Grid_GS_SeperateChannels.jl  AllCodes_new.jl  All_Codes_Depolarizing_91.txt  All_Z_Crawler.jl  Code_Eval.jl  EnvelopeUtil.jl  Envelope_Search.jl  InDepthCalc.jl  IterativeMatrix.jl  KernelMethod.txt  Kernel_Env.jl  Project.toml  RankTest.jl  Smith_Grid.jl  all_z_calc.jl  canonicalSearch.jl  entropycalc.jl  fivetwocodecheck.jl  grid_plotter.jl  hashing_bound_envelope.txt  hashing_bound_envelope_Depolar_Fine.txt  hashing_bound_envelope_SMALL_P_SKEW.txt  hashing_bound_envelope_SMITH.txt  hashing_bound_envelope_X_by_9_thru6.txt  hashing_bound_envelope_concat_depolar.txt  hashing_bound_envelope_concat_depolar_smith_bound.txt  hashing_bound_envelope_concat_ninexz.txt  hashing_bound_envelope_depolar_beyond.txt  hashing_bound_envelope_depolar_crossing_3_5.txt  hashing_bound_envelope_depolar_gs.txt  hashing_bound_envelope_depolar_smith.txt  hashing_bound_envelope_indy.txt  (+14 more)
python/: Plots.ipynb  QECInduced_repetition_code.py  check_n=3_k=1_hashing_bound.py  figure.tex  get_StabGen_for_m_l_repetition_code.py  induced_rate_comparison.tex  induced_rate_comparison_test.tex  induced_rate_comparison_test_fixed.tex  repetition_codes_Smith.py  upper_bounds.py  (+1 more)
rust_kernel/: Cargo.toml
rust_kernel/src/: lib.rs
(+25 files in other folders)
