[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Your Name <you@example.com>"]

[lib]
name = "rust_kernel"
crate-type = ["cdylib", "rlib"]  # cdylib for Julia `ccall`, rlib for tests

[dependencies]
nalgebra = "0.32"
rayon = "1.10"
libc = "0.2"
num-complex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"


